<resources>
    <string name="app_name">CloseRain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="localizacao">Localização</string>
    <string name="alertar">Alertar</string>
    <string name="social">Sobre Nós</string>
    <string name="telefones">Telefones</string>
    <string name="banner_01">Fragment 01</string>
    <string name="SobreNós">Um grupo de estudantes que idealizou uma maneira de poder auxiliar e protejer a população de um problema crescente, a chuva. Então trazemos para você uma alternativa simples e fácil de avisar as pessoas próximas à você e as autoridades governamentais, que você está em uma área alagada ou com risco de alagamento.</string>
    <string name="SobreNós2"> Siga-nos nas nossas redes sociais para poder ficar interado com os alagamentos que ocorrem na sua região:</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_alertar">Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nao_possui_cadastro">Não possui cadastro?</string>
    <string name="cadastrar">cadastrar</string>
    <string name="desejo_me_manter_conectado">Desejo me manter conectado</string>
    <string name="title_activity_alertar_maps2">Map</string>
    <string name="aceito_os_termos_de_uso_e_privacidade">Termos de uso e privacidade</string>
    <string name="nome">Nome</string>

    <string name="confirma_o_de_senha">Confirmação de senha</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="Termos">Para receber informações sobre os seus dados pessoais, os propósitos e as partes de informação que são compartilhadas, entre em contato com o Proprietário via redes sociais. Este aplicativo é destinado para maiores de 18 (dezoito) anos, contendo contato direto com o corpo de bombeiros e polícia Controlador de Dados e Proprietário Tipos de Dados coletados Uso de Dados e outros dados coletados Detalhes completos sobre cada tipo de Dados Pessoais coletados são fornecidos nas seções dedicadas desta política de privacidade ou por textos explicativos específicos exibidos antes da coleta de Dados. Os Dados Pessoais poderão ser fornecidos livremente pelo Usuário, ou, no caso dos Dados de Utilização, coletados automaticamente ao se utilizar este Aplicativo. Todos os Dados solicitados por este Aplicativo são obrigatórios e a falta de fornecimento destes Dados poderá impossibilitar este aplicativo fornece os seus serviços. Nos casos em que este Aplicativo afirmar especificamente que alguns Dados não forem obrigatórios, os Usuários ficam livres para deixar de comunicar estes Dados sem nenhuma consequência para a disponibilidade ou o funcionamento deste serviço (este Aplicativo). Os Usuários ficam responsáveis por quaisquer Dados Pessoais de terceiros que forem obtidos, publicados ou compartilhados através deste serviço (este Aplicativo) e confirmam que possuem a autorização dos terceiros para fornecer os Dados para o Proprietário. Modo e local de processamento dos Dados Método de processamento O Controlador de Dados processa os dados de Usuários de forma adequada e tomará as medidas de segurança adequadas para impedir o acesso não autorizado, divulgação, alteração ou destruição não autorizada dos Dados. O processamento de dados é realizado utilizando computadores e /ou ferramentas de TI habilitadas, seguindo procedimentos organizacionais e meios estritamente relacionados com os fins indicados. Além do Controlador de Dados, em alguns casos, os Dados podem ser acessados por certos tipos de pessoas envolvidas com a operação do site (administração, vendas, marketing, administração legal do sistema) ou pessoas externas (como fornecedores terceirizados de serviços técnicos, carteiros, provedores de hospedagem, empresas de TI, agências de comunicação) nomeadas, quando necessário, como Processadores de Dados por parte do Proprietário. A lista atualizada destas partes pode ser solicitada a partir do Controlador de Dados qualquer momento. Lugar Os dados são processados nas sedes de operação do Controlador de Dados, e em quaisquer outros lugares onde as partes envolvidas com o processamento estejam localizadas. Para mais informações, por favor entre em contato com o Controlador de Dados. Período de conservação Os Dados são mantidos pelo período necessário para prestar o serviço solicitado pelo Usuário, ou pelos fins descritos neste documento, e o Usuário pode solicitar o Controlador de Dados para que os suspenda ou remova Informações adicionais sobre a coleta e processamento de Dados Ação jurídica Os Dados Pessoais dos Usuários podem ser utilizados para fins jurídicos pelo Controlador de Dados em juízo ou nas etapas conducentes à possível ação jurídica decorrente de uso indevido deste serviço (este Aplicativo) ou dos serviços relacionados. O Usuário declara estar ciente de que o Controlador dos Dados poderá ser obrigado a revelar os Dados Pessoais mediante solicitação das autoridades governamentais. Informações adicionais sobre os Dados Pessoais do Usuário Além das informações contidas nesta política de privacidade, este Aplicativo poderá fornecer ao Usuário informações adicionais e contextuais sobre os serviços específicos ou a coleta e processamento de Dados Pessoais mediante solicitação. Logs do sistema e manutenção Para fins de operação e manutenção, este Aplicativo e quaisquer serviços de terceiros poderão coletar arquivos que gravam a interação com este Aplicativo (Logs do sistema) ou usar, para este fim, outros Dados Pessoais (tais como endereço IP) As informações não contidas nesta política Mais detalhes sobre a coleta ou processamento de Dados Pessoais podem ser solicitados ao Controlador de Dados, qualquer momento. Favor ver as informações de contato no início deste documento. Os direitos dos Usuários Os Usuários têm o direito de, a qualquer tempo, consultar o Controlador de Dados para saber se os seus Dados Pessoais foram armazenados e saber mais sobre o conteúdo e origem, verificar a sua exatidão ou para pedir que sejam complementados, cancelados, atualizados e corrigidos, ou que sejam transformados em formato anônimo ou bloquear quaisquer dados mantidos em violação da lei, bem como se opor ao seu tratamento por quaisquer todas as razões legítimas. Os pedidos devem ser enviados para o Controlador de Dados usando a informação de contato fornecida acima Este Aplicativo não suporta pedidos de \"Não Me Rastreie\" Para determinar se qualquer um dos serviços de terceiros que utiliza honram solicitações de \"Não Me Rastreie\", por favor leia as políticas de privacidade. Mudanças nesta política de privacidade O Controlador de Dados se reserva o direito de fazer alterações nesta política de privacidade a qualquer momento, mediante comunicação aos seus Usuários nesta página. É altamente recomendável que esta página seja consultada várias vezes em relação à última modificação descrita na parte inferior. Se o Usuário não concorda com qualquer das alterações da Política de Privacidade, o Usuário deve cessar o uso deste serviço (este Aplicativo) pode solicitar ao Controlador de Dados que apague os Dados Pessoais. Salvo disposição em contrário, a atual política de privacidade se aplica a todos os Dados Pessoais dos Usuários que o Controlador de Dados tiver.</string>
    <string name="TermosTitulo">Política de Privacidade do CloseRain</string>
    <string name="editar_dados">Editar dados</string>
    <string name="salvar_dados">Salvar dados</string>
    <string name="sublinhado">____________________________</string>
</resources>
