<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="24dp">


    <Button
        android:id="@+id/SalvarDados"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_below="@id/linearTelefone"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="SalvarDados"
        android:text="@string/salvar_dados"
        android:textColor="@color/white"

        />


    <LinearLayout
        android:id="@+id/linearemail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearnome"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edtEmailDadosEditar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/linearsenha"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/email"
            android:padding="15dp"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearsenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearemail"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edtSenhaDadosEditar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/linearsenha"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearsenhaConfirmacao"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearsenha"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edtSenhaConfirmacaoDadosEditar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/linearsenhaConfirmacao"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/confirma_o_de_senha"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDataNasc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearsenhaConfirmacao"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"

        >


        <EditText
            android:id="@+id/edtDataNascDadosEditar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            android:padding="15dp"
            android:textSize="15sp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTelefone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearDataNasc"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"

        >


        <EditText
            android:id="@+id/edtTelefoneDadosEditar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/telefone"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearnome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"

        >


        <EditText
            android:id="@+id/edtNomeDadosEditar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/nome"
            android:padding="15dp"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>