<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity"
    android:background="@color/colorPrimary"
    android:layout_marginTop="12dp"

    >


    <ImageView
        android:id="@+id/logo"
        android:layout_width="229dp"
        android:layout_height="118dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logosombreado" />

    <!--EMAIL -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:id="@+id/linearnome"

        >


        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/nome"
            android:padding="15dp"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearnome"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"
        android:id="@+id/linearemail"
        >


        <EditText
            android:id="@+id/edtEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/linearsenha"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/email"
            android:padding="15dp"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearemail"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"
        android:id="@+id/linearsenha"
        >


        <EditText
            android:id="@+id/edtSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/linearsenha"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearsenha"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"
        android:id="@+id/linearsenhaConfirmacao"
        >


        <EditText
            android:id="@+id/edtSenhaCadastroConfirmacao"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/linearsenhaConfirmacao"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:hint="@string/confirma_o_de_senha"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearsenhaConfirmacao"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"
        android:id="@+id/linearDataNasc"

        >


        <EditText
            android:id="@+id/edtDataNasc"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:inputType="date"
            android:hint="@string/data_de_nascimento"
            android:padding="15dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearDataNasc"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true"
        android:id="@+id/linearTelefone"

        >


        <EditText
            android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/montserat"
            android:inputType="number"
            android:hint="@string/telefone"
            android:padding="15dp"
            android:textSize="15sp"
            />
    </LinearLayout>



    <Button
        android:id="@+id/cadastrarFinal"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_below="@id/linearTelefone"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cadastar"
        android:textColor="@color/white"
        android:onClick="Cadastrar"

        />

    <TextView
        android:id="@+id/txtTermos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadastrarFinal"
        android:layout_centerInParent="true"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/montserat"
        android:linksClickable="true"
        android:text="@string/aceito_os_termos_de_uso_e_privacidade"
        android:textColor="@color/colorFont"
        android:textSize="15sp" />


</RelativeLayout>